added two end points
